fixed dropwdown menu too small

--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -473,11 +473,15 @@ box-shadow: 0px 10px 30px rgba(0,0,0,0.10);
     display: flex;
     position: relative;
     z-index: 999;
+    width: 5em;
+    height: 5em;
+    align-items: center;
+    justify-content: center;
   }
 
   .dropdown-content{
     position: absolute;
-    width: 70vw;
+    width: 80vw;
     top: 0;
     margin-top: 75px;
   }
@@ -490,12 +494,13 @@ box-shadow: 0px 10px 30px rgba(0,0,0,0.10);
 
   .dropdown-content ul li{
     /* padding-left: 10px; */
-    height: 30px;
+    height: 40px;
     border: solid;
     border-color: white;
     border-width: 1px;
     display: flex;
     justify-content: center;
+    align-items: center;
   }
 
   /*---------------------------------------
